--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "Froala WYSIWYG Editor",
+    "name": "FroalaEditor",
     "version": "1.1.3",
     "main": "js/froala_editor.min.js",
     "ignore": [
