--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,12 @@
 {
-    "name": "FroalaEditor",
+    "name": "FroalaWysiwygEditor",
     "version": "1.1.3",
     "main": "js/froala_editor.min.js",
     "ignore": [
         "examples",
         "img",
         "froala-wysiwyg.jquery.json",
-        "bower.json",
-        "Readme.md"
+        "bower.json"
     ],
     "dependencies": {
         "jquery": ">=1.10.2"
