--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,31 @@
 {
     "name": "FroalaWysiwygEditor",
     "version": "1.1.3",
+    "description": "Simple and yet the most complete WYSIWYG text editor with awesome functionality such as inline editing and autosave.",
     "main": "js/froala_editor.min.js",
     "ignore": [
         "examples",
         "img",
         "froala-wysiwyg.jquery.json",
         "bower.json"
+    ],
+    "licenses": [
+        {
+            "type": "CC",
+            "url": "http://creativecommons.org/licenses/by-nc-nd/4.0/"
+        },
+        {
+          "type": "Single Website",
+          "url": "http://editor.froala.com/download"
+        },
+        {
+          "type": "Developer",
+          "url": "http://editor.froala.com/download"
+        },
+        {
+          "type": "Business",
+          "url": "http://editor.froala.com/download"
+        }
     ],
     "dependencies": {
         "jquery": ">=1.10.2"
