--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,24 @@
     "name": "FroalaWysiwygEditor",
     "version": "1.1.8",
     "description": "Simple and yet the most complete WYSIWYG text editor with awesome functionality such as inline editing and autosave.",
-    "main": "js/froala_editor.min.js",
+    "main": [
+      "css/froala_editor.min.css",
+      "css/font-awesome.min.css",
+      "fonts/fontawesome-webfont.eot",
+      "fonts/fontawesome-webfont.svg",
+      "fonts/fontawesome-webfont.ttf",
+      "fonts/fontawesome-webfont.woff",
+      "js/libs/beautify-html.js",
+      "js/froala_editor.min.js",
+      "js/plugins/block_styles.min.js",
+      "js/plugins/colors.min.js",
+      "js/plugins/media_manager.min.js",
+      "js/plugins/tables.min.js",
+      "js/plugins/video.min.js",
+      "js/plugins/fonts/fonts.min.js",
+      "js/plugins/fonts/font_family.min.js",
+      "js/plugins/fonts/font_size.min.js"
+    ],
     "ignore": [
         "examples",
         "img",
