--- a/bower.json
+++ b/bower.json
@@ -6,20 +6,21 @@
       "css/froala_editor.min.css",
       "css/froala_content.min.css",
       "css/froala_style.min.css",
-      "css/font-awesome.min.css",
-      "fonts/fontawesome-webfont.eot",
-      "fonts/fontawesome-webfont.svg",
-      "fonts/fontawesome-webfont.ttf",
-      "fonts/fontawesome-webfont.woff",
       "js/froala_editor.min.js",
       "js/plugins/block_styles.min.js",
+      "js/plugins/char_counter.min.js",
       "js/plugins/colors.min.js",
-      "js/plugins/media_manager.min.js",
-      "js/plugins/tables.min.js",
-      "js/plugins/video.min.js",
+      "js/plugins/entities.min.js",
+      "js/plugins/file_upload.min.js",
       "js/plugins/font_family.min.js",
       "js/plugins/font_size.min.js",
-      "js/plugins/char_counter.min.js"
+      "js/plugins/fullscreen.min.js",
+      "js/plugins/inline_styles.min.js",
+      "js/plugins/lists.min.js",
+      "js/plugins/media_manager.min.js",
+      "js/plugins/tables.min.js",
+      "js/plugins/urls.min.js",
+      "js/plugins/video.min.js"
     ],
     "keywords": [
       "froala",
@@ -37,7 +38,7 @@
     "ignore": [
       "examples",
       "img",
-      "froala-wysiwyg.jquery.json",
+      "package.json",
       "bower.json"
     ],
     "licenses": [
