--- a/bower.json
+++ b/bower.json
@@ -56,6 +56,7 @@
         }
     ],
     "dependencies": {
-        "jquery": ">=1.11.0"
+        "jquery": ">=1.11.0",
+        "font-awesome": "4.3.0"
     }
 }
