--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "js/froala_editor.min.js",
         "css/froala_editor.min.css",
         "css/froala_style.min.css",
+        "css/plugins/*.min.css"
         "css/themes/*.min.css"
       ]
     }
