Add CSS plugins to bower.

--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,17 @@
     "main": [
       "css/froala_editor.min.css",
       "css/froala_style.min.css",
+      "css/plugins/char_counter.min.css",
+      "css/plugins/code_view.min.css",
+      "css/plugins/colors.min.css",
+      "css/plugins/emoticons.min.css",
+      "css/plugins/file.min.css",
+      "css/plugins/fullscreen.min.css",
+      "css/plugins/image_manager.min.css",
+      "css/plugins/image.min.css",
+      "css/plugins/line_breaker.min.css",
+      "css/plugins/table.min.css",
+      "css/plugins/video.min.css",
       "js/froala_editor.min.js",
       "js/plugins/align.min.js",
       "js/plugins/char_counter.min.js",
