--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
         "js/froala_editor.min.js",
         "css/froala_editor.min.css",
         "css/froala_style.min.css",
+        "css/plugins/*.min.css",
         "css/themes/*.min.css"
       ]
     }
   ],
-  "version": "2.0.0-rc.3",
+  "version": "2.0.0",
   "description": "A beautiful jQuery WYSIWYG HTML rich text editor. High performance and modern design make it easy to use for developers and loved by users.",
-  "homepage": "https://www.froala.com/wysiwyg-editor/v2.0",
+  "homepage": "https://www.froala.com/wysiwyg-editor",
   "keywords": [
     "froala",
     "html",
@@ -37,16 +38,16 @@
   ],
   "licenses": [
     {
-      "type": "Single Website",
-      "url": "https://www.froala.com/wysiwyg-editor/v2.0/pricing"
+      "type": "One Domain",
+      "url": "https://www.froala.com/wysiwyg-editor/pricing"
     },
     {
       "type": "Advanced",
-      "url": "https://www.froala.com/wysiwyg-editor/v2.0/pricing"
+      "url": "https://www.froala.com/wysiwyg-editor/pricing"
     },
     {
       "type": "OEM",
-      "url": "https://www.froala.com/wysiwyg-editor/v2.0/pricing"
+      "url": "https://www.froala.com/wysiwyg-editor/pricing"
     }
   ],
   "repository": {
