--- a/bower.json
+++ b/bower.json
@@ -77,6 +77,6 @@
     ],
     "dependencies": {
       "jquery": ">=1.11.0",
-      "font-awesome": "4.4.0"
+      "font-awesome": ">=4.4.0"
     }
 }
