--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       ]
     }
   ],
-  "version": "2.0.4-1",
+  "version": "2.0.5",
   "description": "A beautiful jQuery WYSIWYG HTML rich text editor. High performance and modern design make it easy to use for developers and loved by users.",
   "homepage": "https://www.froala.com/wysiwyg-editor",
   "keywords": [
