--- a/bower.json
+++ b/bower.json
@@ -1,49 +1,16 @@
 {
     "name": "froala-wysiwyg-editor",
-    "version": "2.0.5",
     "description": "A beautiful jQuery WYSIWYG HTML rich text editor. High performance and modern design make it easy to use for developers and loved by users.",
-    "main": [
-      "css/froala_editor.min.css",
-      "css/froala_style.min.css",
-      "css/plugins/char_counter.min.css",
-      "css/plugins/code_view.min.css",
-      "css/plugins/colors.min.css",
-      "css/plugins/emoticons.min.css",
-      "css/plugins/file.min.css",
-      "css/plugins/fullscreen.min.css",
-      "css/plugins/image_manager.min.css",
-      "css/plugins/image.min.css",
-      "css/plugins/line_breaker.min.css",
-      "css/plugins/table.min.css",
-      "css/plugins/video.min.css",
-      "js/froala_editor.min.js",
-      "js/plugins/align.min.js",
-      "js/plugins/char_counter.min.js",
-      "js/plugins/code_beautifier.min.js",
-      "js/plugins/code_view.min.js",
-      "js/plugins/colors.min.js",
-      "js/plugins/emoticons.min.js",
-      "js/plugins/entities.min.js",
-      "js/plugins/file.min.js",
-      "js/plugins/font_family.min.js",
-      "js/plugins/font_size.min.js",
-      "js/plugins/fullscreen.min.js",
-      "js/plugins/image.min.js",
-      "js/plugins/image_manager.min.js",
-      "js/plugins/inline_style.min.js",
-      "js/plugins/line_breaker.min.js",
-      "js/plugins/link.min.js",
-      "js/plugins/lists.min.js",
-      "js/plugins/paragraph_format.min.js",
-      "js/plugins/paragraph_style.min.js",
-      "js/plugins/quote.min.js",
-      "js/plugins/save.min.js",
-      "js/plugins/table.min.js",
-      "js/plugins/url.min.js",
-      "js/plugins/video.min.js"
-    ],
+    "license": "https://www.froala.com/wysiwyg-editor/terms",
+    "homepage": "https://www.froala.com/wysiwyg-editor",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/froala/wysiwyg-editor.git"
+    },
     "keywords": [
       "froala",
+      "froala-editor",
+      "froala-wysiwyg",
       "html",
       "text",
       "editor",
@@ -55,25 +22,15 @@
       "javascript",
       "jquery"
     ],
-    "ignore": [
-      "examples",
-      "img",
-      "package.json",
-      "bower.json"
+    "moduleType": "globals",
+    "main": [
+      "css/froala_editor.css",
+      "js/froala_editor.min.js"
     ],
-    "licenses": [
-        {
-          "type": "Single Website",
-          "url": "https://www.froala.com/wysiwyg-editor/pricing"
-        },
-        {
-          "type": "Advanced",
-          "url": "https://www.froala.com/wysiwyg-editor/pricing"
-        },
-        {
-          "type": "OEM",
-          "url": "https://www.froala.com/wysiwyg-editor/pricing"
-        }
+    "ignore": [
+      "html",
+      "img",
+      "package.json"
     ],
     "dependencies": {
       "jquery": ">=1.11.0",
