Change version to 2.1.0.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,37 @@
 {
   "name": "froala-editor",
+  "version": "2.1.0",
+  "description": "A beautiful jQuery WYSIWYG HTML rich text editor. High performance and modern design make it easy to use for developers and loved by users.",
+  "keywords": [
+    "froala",
+    "froala-editor",
+    "froala-wysiwyg",
+    "html",
+    "text",
+    "editor",
+    "wysiwyg",
+    "jquery-plugin",
+    "rich editor",
+    "rich text editor",
+    "rte",
+    "javascript",
+    "jquery"
+  ],
+  "homepage": "https://www.froala.com/wysiwyg-editor",
+  "license": "https://www.froala.com/wysiwyg-editor/pricing",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/froala/wysiwyg-editor.git"
+  },
+  "maintainers": [
+    {
+      "name": "Froala Labs"
+    }
+  ],
+  "dependencies" : {
+    "jquery": ">=1.11.0",
+    "font-awesome": ">=4.4.0"
+  },
   "filename": "js/froala_editor.min.js",
   "npmName": "froala-editor",
   "npmFileMap": [
@@ -14,48 +46,5 @@
         "css/themes/*.min.css"
       ]
     }
-  ],
-  "version": "2.0.5",
-  "description": "A beautiful jQuery WYSIWYG HTML rich text editor. High performance and modern design make it easy to use for developers and loved by users.",
-  "homepage": "https://www.froala.com/wysiwyg-editor",
-  "keywords": [
-    "froala",
-    "html",
-    "text",
-    "editor",
-    "wysiwyg",
-    "jquery-plugin",
-    "rich editor",
-    "rich text editor",
-    "rte",
-    "javascript",
-    "jquery"
-  ],
-  "maintainers": [
-    {
-      "name": "Froala Labs"
-    }
-  ],
-  "licenses": [
-    {
-      "type": "One Domain",
-      "url": "https://www.froala.com/wysiwyg-editor/pricing"
-    },
-    {
-      "type": "Advanced",
-      "url": "https://www.froala.com/wysiwyg-editor/pricing"
-    },
-    {
-      "type": "OEM",
-      "url": "https://www.froala.com/wysiwyg-editor/pricing"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/froala/wysiwyg-editor"
-  },
-  "dependencies" : {
-    "jquery": ">=1.11.0",
-    "font-awesome": ">=4.4.0"
-  }
+  ]
 }
