Fixes composer file.

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "homepage": "https://www.froala.com/wysiwyg-editor",
   "license": "https://www.froala.com/wysiwyg-editor/pricing",
   "support": {
-    "issues": "https://www.froala.com/wysiwyg-editor/contact",
+    "issues": "https://www.froala.com/wysiwyg-editor/contact"
   },
   "keywords": [
     "froala",
