--- a/bower.json
+++ b/bower.json
@@ -34,10 +34,12 @@
     "css/plugins/emoticons.min.css",
     "css/plugins/file.min.css",
     "css/plugins/fullscreen.min.css",
+    "css/plugins/help.min.css",
     "css/plugins/image_manager.min.css",
     "css/plugins/image.min.css",
     "css/plugins/line_breaker.min.css",
     "css/plugins/quick_insert.min.css",
+    "css/plugins/special_characters.min.css"
     "css/plugins/table.min.css",
     "css/plugins/video.min.css",
     "js/froala_editor.min.js",
@@ -54,6 +56,7 @@
     "js/plugins/font_family.min.js",
     "js/plugins/font_size.min.js",
     "js/plugins/fullscreen.min.js",
+    "js/plugins/help.min.js",
     "js/plugins/image.min.js",
     "js/plugins/image_manager.min.js",
     "js/plugins/inline_style.min.js",
@@ -62,12 +65,15 @@
     "js/plugins/lists.min.js",
     "js/plugins/paragraph_format.min.js",
     "js/plugins/paragraph_style.min.js",
+    "js/plugins/print.min.js",
     "js/plugins/quick_insert.min.js",
     "js/plugins/quote.min.js",
     "js/plugins/save.min.js",
+    "js/plugins/special_characters.min.js",
     "js/plugins/table.min.js",
     "js/plugins/url.min.js",
-    "js/plugins/video.min.js"
+    "js/plugins/video.min.js",
+    "js/plugins/word_paste.min.js"
   ],
   "ignore": [
     "html",
