Fixes froala/wysiwyg-editor#1779.

--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,7 @@
     "css/plugins/image.min.css",
     "css/plugins/line_breaker.min.css",
     "css/plugins/quick_insert.min.css",
-    "css/plugins/special_characters.min.css"
+    "css/plugins/special_characters.min.css",
     "css/plugins/table.min.css",
     "css/plugins/video.min.css",
     "js/froala_editor.min.js",
