--- a/bower.json
+++ b/bower.json
@@ -40,6 +40,7 @@
     "css/plugins/line_breaker.min.css",
     "css/plugins/quick_insert.min.css",
     "css/plugins/special_characters.min.css",
+    "css/plugins/spell_checker.min.css",
     "css/plugins/table.min.css",
     "css/plugins/video.min.css",
     "js/froala_editor.min.js",
@@ -58,6 +59,7 @@
     "js/plugins/fullscreen.min.js",
     "js/plugins/help.min.js",
     "js/plugins/image.min.js",
+    "js/plugins/image_aviary.min.js",
     "js/plugins/image_manager.min.js",
     "js/plugins/inline_style.min.js",
     "js/plugins/line_breaker.min.js",
@@ -70,6 +72,7 @@
     "js/plugins/quote.min.js",
     "js/plugins/save.min.js",
     "js/plugins/special_characters.min.js",
+    "js/plugins/spell_checker.min.js",
     "js/plugins/table.min.js",
     "js/plugins/url.min.js",
     "js/plugins/video.min.js",
