--- a/bower.json
+++ b/bower.json
@@ -40,9 +40,9 @@
     "css/plugins/line_breaker.min.css",
     "css/plugins/quick_insert.min.css",
     "css/plugins/special_characters.min.css",
-    "css/plugins/spell_checker.min.css",
     "css/plugins/table.min.css",
     "css/plugins/video.min.css",
+    "css/third_party/spell_checker.min.css",
     "js/froala_editor.min.js",
     "js/froala_editor.pkgd.min.js",
     "js/plugins/align.min.js",
@@ -59,7 +59,6 @@
     "js/plugins/fullscreen.min.js",
     "js/plugins/help.min.js",
     "js/plugins/image.min.js",
-    "js/plugins/image_aviary.min.js",
     "js/plugins/image_manager.min.js",
     "js/plugins/inline_style.min.js",
     "js/plugins/line_breaker.min.js",
@@ -72,11 +71,12 @@
     "js/plugins/quote.min.js",
     "js/plugins/save.min.js",
     "js/plugins/special_characters.min.js",
-    "js/plugins/spell_checker.min.js",
     "js/plugins/table.min.js",
     "js/plugins/url.min.js",
     "js/plugins/video.min.js",
-    "js/plugins/word_paste.min.js"
+    "js/plugins/word_paste.min.js",
+    "js/third_party/image_aviary.min.js",
+    "js/third_party/spell_checker.min.js"
   ],
   "ignore": [
     "html",
