--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
       "basePath": "/",
       "files": [
         "js/plugins/*.min.js",
+        "js/third_party/*.min.js",
         "js/froala_editor.min.js",
         "js/froala_editor.pkgd.min.js",
         "css/froala_editor.min.css",
         "css/froala_editor.pkgd.min.css",
         "css/froala_style.min.css",
         "css/plugins/*.min.css",
+        "css/third_party/*.min.css",
         "css/themes/*.min.css"
       ]
     }
