--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "froala-editor",
   "version": "2.6.1",
-  "description": "A beautiful jQuery WYSIWYG HTML rich text editor. High performance and modern design make it easy to use for developers and loved by users.",
+  "description": "A beautiful Javascript WYSIWYG HTML rich text editor. High performance and modern design make it easy to use for developers and loved by users.",
   "keywords": [
     "froala",
     "froala-editor",
