--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "froala-editor",
-  "version": "2.8.4",
+  "version": "2.8.4-rc.0",
   "description": "A beautiful Javascript WYSIWYG HTML rich text editor. High performance and modern design make it easy to use for developers and loved by users.",
   "keywords": [
     "froala",
