--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "froala-editor",
-  "version": "4.0.0",
+  "version": "4.0.0-1",
   "description": "The next generation Javascript WYSIWYG HTML rich text editor made by devs for devs. High performance and modern design make it easy to use for developers and loved by users.",
   "keywords": [
     "froala",
