--- a/.github/workflows/dispatch-to-children.yml
+++ b/.github/workflows/dispatch-to-children.yml
@@ -34,11 +34,11 @@ jobs:
       # --------------------------------------------
       # Dispatch to Child-A (Rails)
       # --------------------------------------------
-      - name: Dispatch to wysiwyg-rails-child-A
+      - name: Dispatch to wysiwyg-rails
         uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.PAT }}
-          repository: srkdev404-cyber/wysiwyg-rails
+          repository: froala/wysiwyg-rails
           event-type: version_update
           client-payload: |
             {
@@ -46,62 +46,4 @@ jobs:
               "release_notes": ${{ toJson(github.event.release.body) }}
             }
 
-      # --------------------------------------------
-      # Dispatch to Child-B (Ruby SDK)
-      # --------------------------------------------
-      - name: Dispatch to wysiwyg-editor-ruby-sdk-child-B
-        uses: peter-evans/repository-dispatch@v3
-        with:
-          token: ${{ secrets.PAT }}
-          repository: srkdev404-cyber/wysiwyg-editor-ruby-sdk-child-B
-          event-type: version_update
-          client-payload: |
-            {
-              "version": "${{ env.VERSION }}",
-              "release_notes": ${{ toJson(github.event.release.body) }}
-            }
-
-      # --------------------------------------------
-      # Dispatch to Child-C (WordPress)
-      # --------------------------------------------
-      - name: Dispatch to wordpress-froala-wysiwyg-child-C
-        uses: peter-evans/repository-dispatch@v3
-        with:
-          token: ${{ secrets.PAT }}
-          repository: srkdev404-cyber/wordpress-froala-wysiwyg-child-C
-          event-type: version_update
-          client-payload: |
-            {
-              "version": "${{ env.VERSION }}",
-              "release_notes": ${{ toJson(github.event.release.body) }}
-            }
-
-      # --------------------------------------------
-      # Dispatch to Child-D (Yii2)
-      # --------------------------------------------
-      - name: Dispatch to yii2-froala-editor-child-D
-        uses: peter-evans/repository-dispatch@v3
-        with:
-          token: ${{ secrets.PAT }}
-          repository: srkdev404-cyber/yii2-froala-editor-child-D
-          event-type: version_update
-          client-payload: |
-            {
-              "version": "${{ env.VERSION }}",
-              "release_notes": ${{ toJson(github.event.release.body) }}
-            }
-
-      # --------------------------------------------
-      # Dispatch to Child-E (Vue)
-      # --------------------------------------------
-      - name: Dispatch to vue-froala-wysiwyg-child-E
-        uses: peter-evans/repository-dispatch@v3
-        with:
-          token: ${{ secrets.PAT }}
-          repository: srkdev404-cyber/vue-froala-wysiwyg-child-E
-          event-type: version_update
-          client-payload: |
-            {
-              "version": "${{ env.VERSION }}",
-              "release_notes": ${{ toJson(github.event.release.body) }}
-            }
+    
