Change dispatch repository and remove Ruby child repo
Updated the repository for dispatching events and removed the Ruby child repo dispatch.

--- a/.github/workflows/dispatch-to-children.yml
+++ b/.github/workflows/dispatch-to-children.yml
@@ -30,21 +30,12 @@ jobs:
         uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.PAT }}
-          repository: srkdev404-cyber/wysiwyg-rails
+          repository: froala/wysiwyg-rails
           event-type: version_update
           client-payload: |
             {
               "version": "${{ env.VERSION }}",
               "release_notes": ${{ toJson(github.event.release.body) }}
             }
-      - name: Dispatch to Ruby child repo
-        uses: peter-evans/repository-dispatch@v3
-        with:
-          token: ${{ secrets.PAT }}
-          repository: srkdev404-cyber/wysiwyg-editor-ruby-sdk
-          event-type: version_update
-          client-payload: |
-            {
-              "version": "${{ env.VERSION }}",
-              "release_notes": ${{ toJson(github.event.release.body) }}
+    .body) }}
             }
